--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,27 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ]
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "extends": [
+        "config:base",
+        "helpers:pinGitHubActionDigests",
+        "regexManagers:githubActionsVersions",
+        "group:allNonMajor"
+    ],
+    "regexManagers": [
+        {
+            "fileMatch": [
+                "^(workflow-templates|\\.github\\/workflows)\\/[^/]+\\.[Yy][Aa]?[Mm][Ll]$",
+                "(^|\\/)action\\.[Yy][Aa]?[Mm][Ll]$"
+            ],
+            "matchStrings": [
+                "ubuntu-(?<currentValue>\\d\\d)\\.04"
+            ],
+            "depNameTemplate": "github actions runner ubuntu",
+            "packageNameTemplate": "actions/runner-images",
+            "datasourceTemplate": "github-releases",
+            "versioningTemplate": "docker"
+        },
+    ],
+    "docker": {
+        "pinDigests": true
+    }
 }
