--- a/.github/workflows/docker-current.yml
+++ b/.github/workflows/docker-current.yml
@@ -61,7 +61,7 @@ jobs:
         id: build
         uses: docker/build-push-action@2eb1c1961a95fc15694676618e422e8ba1d63825 # v4.1.1
         with:
-          file: Dockerfile-current
+          file: Dockerfile.current
           context: .
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
