--- a/.github/workflows/docker-15.0.yml
+++ b/.github/workflows/docker-15.0.yml
@@ -18,6 +18,8 @@ env:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    permissions:
+      packages: write
     strategy:
       fail-fast: false
       matrix:
@@ -26,6 +28,18 @@ jobs:
           - linux/amd64
           - linux/arm/v7
     steps:
+      -
+        name: Maximise disc space
+        run: |
+          df -h
+          printf '\n'
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          printf '\n'
+          df -h
       -
         name: Checkout
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
@@ -84,6 +98,8 @@ jobs:
 
   merge:
     runs-on: ubuntu-22.04
+    permissions:
+      packages: write
     needs:
       - build
     steps:
