--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,27 +1,19 @@
 {
-    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": [
-        "config:base",
-        "helpers:pinGitHubActionDigests",
-        "regexManagers:githubActionsVersions",
-        "group:allNonMajor"
-    ],
-    "regexManagers": [
-        {
-            "fileMatch": [
-                "^(workflow-templates|\\.github\\/workflows)\\/[^/]+\\.[Yy][Aa]?[Mm][Ll]$",
-                "(^|\\/)action\\.[Yy][Aa]?[Mm][Ll]$"
-            ],
-            "matchStrings": [
-                "ubuntu-(?<currentValue>\\d\\d)\\.04"
-            ],
-            "depNameTemplate": "github actions runner ubuntu",
-            "packageNameTemplate": "actions/runner-images",
-            "datasourceTemplate": "github-releases",
-            "versioningTemplate": "docker"
-        }
-    ],
-    "docker": {
-        "pinDigests": true
-    }
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "config:best-practices",
+    ":maintainLockFilesMonthly",
+    ":separateMajorReleases",
+    ":separateMultipleMajorReleases",
+    ":separatePatchReleases",
+    "regexManagers:dockerfileVersions",
+    "regexManagers:githubActionsVersions",
+    "schedule:earlyMondays"
+  ],
+  "ignoreTests": false,
+  "pre-commit": {
+    "enabled": true
+  },
+  "rangeStrategy": "pin",
+  "timezone": "Asia/Tokyo"
 }
