--- a/Dockerfile.current
+++ b/Dockerfile.current
@@ -1,7 +1,7 @@
 FROM aclemons/slackware:current-full@sha256:091f792dba993c9d9edaeb30cbb9c3e506d9cb49d01a860b4846c189d2c4089a
 
 COPY scripts/install_slackrepo.sh /
-RUN bash /install_slackrepo.sh && rm /install_slackrepo.sh
+RUN ./install_slackrepo.sh && rm /install_slackrepo.sh
 RUN if [ "$(uname -m)" = "aarch64" ] ; then echo "export AARCH64=1" >> /etc/slackrepo/slackrepo_ponce.conf ; fi
 
 CMD ["su", "-"]
