--- a/.github/workflows/docker-15.0.yml
+++ b/.github/workflows/docker-15.0.yml
@@ -16,6 +16,9 @@ concurrency:
 
 env:
   REGISTRY_IMAGE: aclemons/slackrepo
+  # renovate: datasource=docker depName=tonistiigi/binfmt versioning=loose
+  BINFMT_IMAGE: qemu-v9.2.0@sha256:2ebbaaeb812b8f9d1cd725d2640a25989b2c25506f3665411a92554746f68562
+
 jobs:
   build:
     runs-on: ubuntu-24.04
@@ -64,8 +67,12 @@ jobs:
           tags: |
             type=raw,value=slack-15.0
             type=raw,value=latest
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@53851d14592bedcffcf25ea515637cff71ef929a # v3.3.0
+        with:
+          image: tonistiigi/binfmt:${{ env.BINFMT_IMAGE }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@6524bf65af31da8d45b59e8c27de4bd072b392f5 # v3.8.0
       - name: Login to GitHub Container Registry
